# WarpEngine

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  download_libs.ps1  download_libs.sh  generate_atlas.py  generate_font.py  generate_player_sprite.py  generate_sfx.py
.agent/workflows/: INSTRUKCJA.md  build-full.md  build.md
.cache/clangd/index/: main.cpp.78FBD5E8CA168A4A.idx  webgpu.h.90542AF0DCEB9FCC.idx  wgpu.h.11F993D5A22C605B.idx  wgpu_surface.cpp.013D42869BDAFD19.idx  wgpu_surface.h.616EF1AE9C65060F.idx  wgpu_surface_macos.mm.F1DF19A87F8B97F6.idx
src/: audio.cpp  audio.h  game.cpp  game.h  main.cpp  stb_image_impl.cpp  texture.cpp  texture.h  wgpu_surface.cpp  wgpu_surface.h  wgpu_surface_macos.mm
